# elektrum-desktop

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build-and-release.yml  build.yml
src/: core.cpp
